--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.8.1
 attrs==22.1.0
 cffi==1.15.1
 click==8.1.3
@@ -6,6 +7,7 @@ flasgger==0.9.5
 Flask==2.2.2
 Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.0
 importlib-metadata==5.0.0
@@ -14,6 +16,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.16.0
 jwt==1.3.1
+Mako==1.2.3
 MarkupSafe==2.1.1
 marshmallow==3.18.0
 marshmallow-sqlalchemy==0.28.1
