--- a/api/author/docs/comments.yml
+++ b/api/author/docs/comments.yml
@@ -14,7 +14,7 @@ parameters:
   - in: query
     description: The query should contain the article id
     required: false
-    name: 'id'
+    name: 'article id'
     type: 'string'
 responses:
   200:
