--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.8.1
 attrs==22.1.0
+boto3==1.26.5
+botocore==1.29.5
 cffi==1.15.1
 click==8.1.3
 cryptography==38.0.1
@@ -14,6 +16,7 @@ importlib-metadata==5.0.0
 importlib-resources==5.10.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonschema==4.16.0
 jwt==1.3.1
 Mako==1.2.3
@@ -27,9 +30,12 @@ psycopg2-binary==2.9.5
 pycparser==2.21
 pyparsing==3.0.9
 pyrsistent==0.19.1
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 PyYAML==6.0
+s3transfer==0.6.0
 six==1.16.0
 SQLAlchemy==1.4.42
+urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.10.0
