--- a/api/article/docs/create_article.yml
+++ b/api/article/docs/create_article.yml
@@ -3,6 +3,8 @@ tags:
   - Article
 produces:
   - "application/json"
+security:
+  - APIKeyHeader: [ 'Authorization' ]
 parameters:
   - in: query
     description: The query should contain the author id
