--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   db:
     image: postgres
     volumes:
-      - postgres_data_sql:/var/lib/postgresql/data/
+      - blog_service:/var/lib/postgresql/data/
     env_file:
       - ./.env
     ports:
-      - 5437:5432
+      - 5432:5432
 
 volumes:
-  postgres_data_sql:
+  blog_service:
