--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,23 @@ boto3==1.26.5
 botocore==1.29.5
 cffi==1.15.1
 click==8.1.3
+click-didyoumean==0.3.0
 cryptography==38.0.1
 flasgger==0.9.5
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.0
+gunicorn==20.1.0
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 jsonschema==4.16.0
-jwt==1.3.1
 Mako==1.2.3
 MarkupSafe==2.1.1
 marshmallow==3.18.0
@@ -28,14 +30,17 @@ packaging==21.3
 pkgutil-resolve-name==1.3.10
 psycopg2-binary==2.9.5
 pycparser==2.21
+PyJWT==2.6.0
 pyparsing==3.0.9
 pyrsistent==0.19.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-json-logger==2.0.4
 PyYAML==6.0
 s3transfer==0.6.0
 six==1.16.0
 SQLAlchemy==1.4.42
+SQLAlchemy-Utils==0.38.3
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.10.0
