--- a/.github/workflows/staging-workflow.yml
+++ b/.github/workflows/staging-workflow.yml
@@ -31,10 +31,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
     - name: Check out code
@@ -49,13 +48,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-        if [ -f ./services/web/requirements.txt ]; then pip install -r ./services/web/requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run the flake8 linter
-      run: flake8
+    # - name: Run the flake8 linter
+    #   run: flake8
 
-    - name: Run the pylint linter
-      run: pylint --rcfile=.pylintrc ./services/web/api/
+    # - name: Run the pylint linter
+    #   run: pylint --rcfile=.pylintrc api/
 
     # - name: Run the mypy linter
     #   run: mypy -p api
@@ -65,6 +64,7 @@ jobs:
         touch .env
         echo FLASK_APP=${{secrets.FLASK_APP}} >> .env
         echo FLASK_ENV=${{secrets.FLASK_ENV}} >> .env
+        echo FLASK_DEBUG=${{secrets.FLASK_DEBUG}} >> .env
         echo SECRET_KEY=${{secrets.SECRET_KEY}} >> .env
         echo POSTGRES_HOST=${{secrets.POSTGRES_HOST}} >> .env
         echo POSTGRES_DB=${{secrets.POSTGRES_DB}} >> .env
@@ -72,29 +72,25 @@ jobs:
         echo POSTGRES_USER=${{secrets.POSTGRES_USER}} >> .env
         echo POSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}} >> .env
 
-        echo MAIL_HOST=${{secrets.MAIL_HOST}} >> .env
-        echo MAIL_PORT=${{secrets.MAIL_PORT}} >> .env
-        echo MAIL_USERNAME=${{secrets.MAIL_USERNAME}} >> .env
-        echo MAIL_PASSWORD=${{secrets.MAIL_PASSWORD}} >> .env
-
         echo FIREHOSE_DELIVERY_STREAM=${{secrets.FIREHOSE_DELIVERY_STREAM}} >> .env
 
-        echo AWS_KEY=${{secrets.AWS_KEY}} >> .env
-        echo AWS_SECRET=${{secrets.AWS_SECRET}} >> .env
+        echo AWS_ACCESS_KEY=${{secrets.AWS_ACCESS_KEY}} >> .env
+        echo AWS_ACCESS_SECRET=${{secrets.AWS_ACCESS_SECRET}} >> .env
         echo AWS_REGION=${{secrets.AWS_REGION}} >> .env
+        echo S3_BUCKET=${{secrets.S3_BUCKET}} >> .env
 
     - name: Create the test tables
       run: |
-        python ./services/web/manage.py create_db
+        python manage.py create_db
 
     - name: Test with pytest
       run: |
-        if [ -d ./services/web/tests ] || [ -d ./services/web/test ]; then python -m pytest; fi
+        if [ -d tests ] || [ -d ./services/web/test ]; then python -m pytest; fi
 
     - name: Pytest Coverage
       run: |
-        if [ -d ./services/web/tests ] || [ -d ./services/web/test ]; then coverage run -m pytest; fi
-        if [ -d ./services/web/tests ] || [ -d ./services/web/test ]; then coverage report -m; fi
+        if [ -d tests ] || [ -d test ]; then coverage run -m pytest; fi
+        if [ -d tests ] || [ -d test ]; then coverage report -m; fi
 
     - name: Coverage Report
       run: coverage xml
@@ -139,14 +135,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f ./services/web/requirements-dev.txt ]; then pip install -r ./services/web/requirements-dev.txt; fi
-        if [ -f ./services/web/requirements.txt ]; then pip install -r ./services/web/requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Create the Environment variables
       run: |
         touch .env
         echo FLASK_APP=${{secrets.FLASK_APP}} >> .env
         echo FLASK_ENV=${{secrets.FLASK_ENV}} >> .env
+        echo FLASK_DEBUG=${{secrets.FLASK_DEBUG}} >> .env
         echo SECRET_KEY=${{secrets.SECRET_KEY}} >> .env
         echo POSTGRES_HOST=${{secrets.POSTGRES_HOST}} >> .env
         echo POSTGRES_DB=${{secrets.POSTGRES_DB}} >> .env
@@ -154,25 +151,19 @@ jobs:
         echo POSTGRES_USER=${{secrets.POSTGRES_USER}} >> .env
         echo POSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}} >> .env
 
-        echo MAIL_HOST=${{secrets.MAIL_HOST}} >> .env
-        echo MAIL_PORT=${{secrets.MAIL_PORT}} >> .env
-        echo MAIL_USERNAME=${{secrets.MAIL_USERNAME}} >> .env
-        echo MAIL_PASSWORD=${{secrets.MAIL_PASSWORD}} >> .env
-
         echo FIREHOSE_DELIVERY_STREAM=${{secrets.FIREHOSE_DELIVERY_STREAM}} >> .env
 
-        echo AWS_KEY=${{secrets.AWS_KEY}} >> .env
-        echo AWS_SECRET=${{secrets.AWS_SECRET}} >> .env
+        echo AWS_ACCESS_KEY=${{secrets.AWS_ACCESS_KEY}} >> .env
+        echo AWS_ACCESS_SECRET=${{secrets.AWS_ACCESS_SECRET}} >> .env
         echo AWS_REGION=${{secrets.AWS_REGION}} >> .env
+        echo S3_BUCKET=${{secrets.S3_BUCKET}} >> .env
 
     - name: Create the development tables
       run: |
-        python ./services/web/manage.py create_db
+        python manage.py create_db
 
     - name: Test application
       run: |
-        python ./services/web/manage.py seed_db
-        python ./services/web/manage.py run &
+        python manage.py run &
         sleep 10
         curl http://127.0.0.1:5000/
-        curl http://127.0.0.1:5000/users
