--- a/.github/workflows/feature-development-workflow.yml
+++ b/.github/workflows/feature-development-workflow.yml
@@ -48,8 +48,8 @@ jobs:
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # - name: Run the flake8 linter
-    #   run: flake8
+    - name: Run the flake8 linter
+      run: flake8
 
     # - name: Run the pylint linter
     #   run: pylint --rcfile=.pylintrc api/
@@ -119,7 +119,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
     - name: Check out code
