--- a/.github/workflows/feature-development-workflow.yml
+++ b/.github/workflows/feature-development-workflow.yml
@@ -51,8 +51,8 @@ jobs:
     - name: Run the flake8 linter
       run: flake8
 
-    # - name: Run the pylint linter
-    #   run: pylint --rcfile=.pylintrc api/
+    - name: Run the pylint linter
+      run: pylint --rcfile=.pylintrc ./api
 
     # - name: Run the mypy linter
     #   run: mypy -p api
