--- a/.github/workflows/feature-development-workflow.yml
+++ b/.github/workflows/feature-development-workflow.yml
@@ -76,6 +76,8 @@ jobs:
         echo AWS_ACCESS_SECRET=${{secrets.AWS_ACCESS_SECRET}} >> .env
         echo AWS_REGION=${{secrets.AWS_REGION}} >> .env
         echo S3_BUCKET=${{secrets.S3_BUCKET}} >> .env
+        echo QUEUE_URL=${{secrets.QUEUE_URL}} >> .env
+
 
     - name: Create the test tables
       run: |
@@ -155,6 +157,7 @@ jobs:
         echo AWS_ACCESS_SECRET=${{secrets.AWS_ACCESS_SECRET}} >> .env
         echo AWS_REGION=${{secrets.AWS_REGION}} >> .env
         echo S3_BUCKET=${{secrets.S3_BUCKET}} >> .env
+        echo QUEUE_URL=${{secrets.QUEUE_URL}} >> .env
 
     - name: Create the development tables
       run: |
