--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,8 @@ repos:
   - id: commitizen
   repo: https://github.com/commitizen-tools/commitizen
   rev: v2.37.0
+
+- hooks:
+  - id: pydocstyle
+  repo: https://github.com/PyCQA/pydocstyle
+  rev: 6.1.1
