--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,5 @@
 repos:
 - hooks:
-  - id: commitizen
-  repo: https://github.com/commitizen-tools/commitizen
-  rev: v2.37.0
-
-- hooks:
-  - id: pydocstyle
-  repo: https://github.com/PyCQA/pydocstyle
-  rev: 6.1.1
+  - id: trailing-whitespace
+  repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.2.0
