--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,8 @@ repos:
   - id: trailing-whitespace
   repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.2.0
+- hooks:
+  - id: flake8
+    language_version: python3
+  repo: https://github.com/PyCQA/flake8
+  rev: 4.0.1
