--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,6 @@ repos:
   - id: check-docstring-first
   - id: debug-statements
     language_version: python3
-  - id: check-executables-have-shebangs
   - id: check-json
   - id: check-yaml
   - id: detect-private-key
@@ -22,7 +21,6 @@ repos:
     - --branch
     - production
     id: no-commit-to-branch
-  # - id: pretty-format-json
   - id: requirements-txt-fixer
   repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.2.0
@@ -35,14 +33,14 @@ repos:
 #   - id: bandit
 #   repo: https://github.com/PyCQA/bandit
 #   rev: 1.7.4
-- hooks:
-  - id: pydocstyle
-  repo: https://github.com/PyCQA/pydocstyle
-  rev: 6.1.1
-- hooks:
-  - id: pylint
-  repo: https://github.com/PyCQA/pylint
-  rev: v2.13.7
+# - hooks:
+#   - id: pydocstyle
+#   repo: https://github.com/PyCQA/pydocstyle
+#   rev: 6.1.1
+# - hooks:
+#   - id: pylint
+#   repo: https://github.com/PyCQA/pylint
+#   rev: v2.13.7
 - hooks:
   - id: isort
   repo: https://github.com/PyCQA/isort
