--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ s3transfer==0.6.0
 six==1.16.0
 SQLAlchemy==1.4.42
 SQLAlchemy-Utils==0.38.3
+typing==3.7.4.3
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.10.0
